fix: Make height overflow scroll COMPASS-4660 (#214)

--- a/packages/compass-query-history/src/components/query-history/query-history.less
+++ b/packages/compass-query-history/src/components/query-history/query-history.less
@@ -15,4 +15,5 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  height: 100%;
 }
